--- a/.github/workflows/provision-and-test.yml
+++ b/.github/workflows/provision-and-test.yml
@@ -39,5 +39,5 @@ jobs:
         with:
           tenant: 'dti-jupyter'
           tag: 'tc02'
-          package: 'dti-jupyter
+          package: 'dti-jupyter'
           c3repo: 'training'
