--- a/.github/workflows/provision-and-test.yml
+++ b/.github/workflows/provision-and-test.yml
@@ -10,10 +10,10 @@ on:
 ########################################################################
 env:
   DTI_PROVISIONER_VERSION: v1.38
-  TAG: ${{ github.event.inputs.tag }}
-  TENANT: ${{ github.event.inputs.tenant }}
-  PACKAGE: ${{ github.event.inputs.package }}
-  C3REPO: ${{ github.event.inputs.c3repo }}
+  TAG: 'tc02'
+  TENANT: 'dti-jupyter'
+  PACKAGE: 'dti-jupyter'
+  C3REPO: 'training'
   PYTHON_VERSION: 3.9 # For running pytest "locally", not for C3 env.
 
 ########################################################################
@@ -22,7 +22,7 @@ env:
 
 jobs:
   provision:
-    name: Provision
+    name: Provision to tc02
     runs-on: ubuntu-latest
     steps:
           
@@ -59,7 +59,7 @@ jobs:
           c3repo: ${{ env.C3REPO }}
           
   test:
-    name: Test
+    name: Test tc02
     runs-on: ubuntu-latest
     needs: provision
     steps:
