--- a/.github/workflows/provision-main-to-tc01.yml
+++ b/.github/workflows/provision-main-to-tc01.yml
@@ -2,6 +2,9 @@ on:
   push:
     branches:
     - main
+    paths:
+    - 'training/**'
+    - 'test/**'
 
 ########################################################################        
 # Settings for this workflow:
