--- a/.github/workflows/provision-and-test.yml
+++ b/.github/workflows/provision-and-test.yml
@@ -2,6 +2,9 @@ on:
   pull_request:
     branches:
     - main
+    paths:
+    - 'training/**'
+    - 'test/**'
 
 ########################################################################        
 # Settings for this workflow:
