Added modelDeployment dependency to support TutorialModelDeplyment notebook

--- a/training/dti-jupyter/package.json
+++ b/training/dti-jupyter/package.json
@@ -2,5 +2,5 @@
   "name": "dti-jupyter",
   "description": "Lightbulb Practice Exercises",
   "author": "C3 Training",
-  "dependencies": ["standardDependencies", "machineLearning"]
+  "dependencies": ["standardDependencies", "machineLearning", "modelDeployment"]
 }
