--- a/training/dti-jupyter/package.json
+++ b/training/dti-jupyter/package.json
@@ -2,5 +2,5 @@
   "name": "dti-jupyter",
   "description": "Training application and development space for DTI project teams.",
   "author": "DTI DevOps",
-  "dependencies": ["standardDependencies", "machineLearning", "modelDeployment", "hycom-test"]
+  "dependencies": ["standardDependencies", "machineLearning", "modelDeployment", "hycom-test", "dev"]
 }
