--- a/.github/workflows/provision-to-tc03d-on-pr.yml
+++ b/.github/workflows/provision-to-tc03d-on-pr.yml
@@ -1,7 +1,7 @@
 on:
-  push:
+  pull_request:
     branches:
-    - tc01d
+    - tc03d
     paths:
     - 'training/**'
     - 'test/**'
@@ -13,7 +13,7 @@ on:
 ########################################################################
 env:
   DTI_PROVISIONER_VERSION: v1.44
-  TAG: 'tc01d'
+  TAG: 'tc03d'
   TENANT: 'dev'
   C3REPO: 'training'
   PACKAGE: 'dti-jupyter'
