--- a/.github/workflows/sync_main-to-tc02d.yml
+++ b/.github/workflows/sync_main-to-tc02d.yml
@@ -3,9 +3,10 @@ on:
   push:
     branches:
       - main
-#     paths:
-#       - 'training/**'
-#       - 'test/**'
+    paths:
+      - 'training/**'
+      - 'test/**'
+      - '.github'
 
 jobs:
   sync-branches:
