--- a/.github/workflows/sync_tc01d-to-develop.yml
+++ b/.github/workflows/sync_tc01d-to-develop.yml
@@ -3,26 +3,39 @@ on:
   push:
     branches:
       - tc01d
-    # paths:
-    #   - 'training/**'
-    #   - 'test/**'
-    #   - '.github/**'
 
 jobs:
-  sync-main-to-tc01d:
+  createPullRequest:
     runs-on: ubuntu-latest
-    name: Syncing tc01d to develop
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set up Node
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+
+      - name: Create Pull Request
+        uses: actions/create-pull-request@v3
         with:
-          node-version: 12
-      - name: Opening pull request
-        id: pull
-        uses: tretuna/sync-branches@1.2.0
-        with:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          FROM_BRANCH: "tc01d"
-          TO_BRANCH: "develop"
+          title: 'Sync tc01d to develop'
+          author: author: dti-devops dti-devops@lists.berkeley.edy
+          branch: tc01d
+          base: develop
+          labels: |
+            automated pr
+            automerge
+
+# jobs:
+#   sync-main-to-tc01d:
+#     runs-on: ubuntu-latest
+#     name: Syncing tc01d to develop
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v2
+#       - name: Set up Node
+#         uses: actions/setup-node@v1
+#         with:
+#           node-version: 12
+#       - name: Opening pull request
+#         id: pull
+#         uses: tretuna/sync-branches@1.2.0
+#         with:
+#           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+#           FROM_BRANCH: "tc01d"
+#           TO_BRANCH: "develop"
