--- a/.github/workflows/sync_tc01d-to-develop.yml
+++ b/.github/workflows/sync_tc01d-to-develop.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/create-pull-request@v3
         with:
           title: 'Sync tc01d to develop'
-          author: author: dti-devops dti-devops@lists.berkeley.edy
+          author: dti-devops dti-devops@lists.berkeley.edu
           branch: tc01d
           base: develop
           labels: |
