--- a/.github/workflows/sync_tc01d-to-develop.yml
+++ b/.github/workflows/sync_tc01d-to-develop.yml
@@ -20,6 +20,7 @@ jobs:
           labels: |
             automated pr
             automerge
+          token: ${{secrets.GITHUB_TOKEN}}
 
 # jobs:
 #   sync-main-to-tc01d:
