auto approve change

--- a/.github/workflows/autoapprove_github-action-pulls.yml
+++ b/.github/workflows/autoapprove_github-action-pulls.yml
@@ -10,6 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: hmarr/auto-approve-action@v2
-      if: github.actor == 'github-actions[bot]'
+      if: github.actor == 'github-actions[bot]' || github.actor == 'dti-devops'
       with:
         github-token: "${{ secrets.DTI_DEVOPS_TOKEN }}"
