--- a/.github/workflows/sync_dev-to-develop.yml
+++ b/.github/workflows/sync_dev-to-develop.yml
@@ -1,3 +1,8 @@
+############################################################################
+#
+#  Workflow to sychronize development tag branches to develop branch
+#
+############################################################################
 name: Sync tag-branch to develop
 on:
   push:
