--- a/.github/workflows/sync_dev-to-develop.yml
+++ b/.github/workflows/sync_dev-to-develop.yml
@@ -22,18 +22,18 @@ jobs:
         run: |
           echo "Ref: ${{ github.event.push.ref }}"
           echo "Ref:: ${GITHUB_REF##*/}"
-          git fetch origin ${{ github.event.push.ref }}:${{ github.event.push.ref }}
-          git reset --hard ${{ github.event.push.ref }}
+          git fetch origin ${GITHUB_REF##*/}:${GITHUB_REF##*/}
+          git reset --hard ${GITHUB_REF##*/}
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v3
         with:
-          title: "Sync ${{ github.event.push.ref }} to develop"
+          title: "Sync ${GITHUB_REF##*/} to develop"
           labels: |
             automated pr
             automerge
           token: ${{secrets.GITHUB_TOKEN}}
-          branch: "develop-${{ github.event.push.ref }}-update"
+          branch: "develop-${GITHUB_REF##*/}-update"
       - name: Check outputs
         run: |
           echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
