--- a/.github/workflows/sync_dev-to-develop.yml
+++ b/.github/workflows/sync_dev-to-develop.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           echo "Ref: ${{ github.event.push.ref }}"
           echo "Ref:: ${GITHUB_REF##*/}"
-          echo "Update branch: ${{ env.UPDATE_BRANCH }}
+          echo "Update branch: ${{ env.UPDATE_BRANCH }}"
           git fetch origin "${GITHUB_REF##*/}:${GITHUB_REF##*/}"
           git reset --hard ${GITHUB_REF##*/}
       - name: Create Pull Request
