--- a/.github/workflows/sync_dev-to-develop.yml
+++ b/.github/workflows/sync_dev-to-develop.yml
@@ -15,7 +15,7 @@ jobs:
   createPullRequest:
     runs-on: ubuntu-latest
     env:
-      UPDATE_BRANCH: "develop-${GITHUB_REF##*/}-update"
+      UPDATE_BRANCH: develop-${GITHUB_REF##*/}-update
     steps:
       - uses: actions/checkout@v2
         with:
@@ -31,7 +31,7 @@ jobs:
         id: cpr
         uses: peter-evans/create-pull-request@v3
         with:
-          title: "Sync ${GITHUB_REF##*/} to develop"
+          title: Sync ${GITHUB_REF##*/} to develop
           labels: |
             automated pr
             automerge
