--- a/.github/workflows/sync_dev-to-develop.yml
+++ b/.github/workflows/sync_dev-to-develop.yml
@@ -15,14 +15,14 @@ jobs:
   createPullRequest:
     runs-on: ubuntu-latest
     env:
-      UPDATE_BRANCH: develop-${{ GITHUB_REF##*/ }}-update
+      UPDATE_BRANCH: develop-${GITHUB_REF##*/}-update
     steps:
       - uses: actions/checkout@v2
         with:
           ref: develop
       - name: Reset Compare Branch
         run: |
-          echo "Ref: ${{ github.event.push.ref }}"
+          echo "Ref: ${{ github.event.push.refs.head }}"
           echo "Ref:: ${GITHUB_REF##*/}"
           echo "Update branch: ${{ env.UPDATE_BRANCH }}"
           git fetch origin "${GITHUB_REF##*/}:${GITHUB_REF##*/}"
