--- a/.github/workflows/sync_dev-to-develop.yml
+++ b/.github/workflows/sync_dev-to-develop.yml
@@ -34,7 +34,7 @@ jobs:
           echo "Ref: ${{ github.event.ref }}"
           echo "Ref:: ${GITHUB_REF##*/}"
           echo "Update branch: ${{ env.UPDATE_BRANCH }}"
-          git fetch origin "${GITHUB_REF##*/}:${GITHUB_REF##*/}"
+          git fetch origin "${{ env.UPDATE_BRANCH }}:${GITHUB_REF##*/}"
           git reset --hard ${GITHUB_REF##*/}
       - name: Create Pull Request
         id: cpr
