--- a/.github/workflows/sync_dev-to-develop.yml
+++ b/.github/workflows/sync_dev-to-develop.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   createSyncMatrix:
-    runs-on: ubuntu-latestenv:
+    runs-on: ubuntu-latest
     env:
       REF: ${{ github.event.ref }}
     outputs:
